--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express": "^4.21.2",
     "google-auth-library": "^10.6.1",
     "google-spreadsheet": "^5.2.0",
+    "jspdf": "^4.2.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.546.0",
     "motion": "^12.23.24",
     "react": "^19.0.0",
